Addition of Favicon & Optimization of images

--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Omnifood is an AI-powered food subscription that will make you eat healthy again, 365 days per year. It's tailored to your personal tastes and nutritional needs."
+    />
+
+    <link rel="icon" href="07-omnifood-Desktop/img/favicon.png" />
+    <link
+      rel="apple-touch-icon"
+      href="07-omnifood-Desktop/img/apple-touch-icon.png"
+    />
+    <link rel="manifest" href="07-omnifood-Desktop/manifest.webmanifest" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -12,11 +24,12 @@
     />
     <link rel="stylesheet" href="07-Omnifood-Desktop/styles/general.css" />
     <link rel="stylesheet" href="07-Omnifood-Desktop/styles/style.css" />
+    <link rel="stylesheet" href="07-Omnifood-Desktop/styles/queries.css" />
 
-    <title>Omnifood</title>
+    <title>Omnifood &mdash; Never cook again!</title>
   </head>
   <body>
-    <header class="header">
+    <header class="header sticky">
       <a href="#">
         <img
           src="07-Omnifood-Desktop/img/omnifood-logo.png"
@@ -26,14 +39,22 @@
       </a>
       <nav class="main-nav">
         <ul class="main-nav-list">
-          <li><a href="#" class="main-nav-link">How it works</a></li>
-          <li><a href="#" class="main-nav-link">Meals</a></li>
-          <li><a href="#" class="main-nav-link">Testimonials</a></li>
-          <li><a href="#" class="main-nav-link">Pricing</a></li>
-          <li><a href="#" class="main-nav-link nav-cta">Try for free</a></li>
+          <li><a href="#how" class="main-nav-link">How it works</a></li>
+          <li><a href="#meals" class="main-nav-link">Meals</a></li>
+          <li>
+            <a href="#testimonials" class="main-nav-link">Testimonials</a>
+          </li>
+          <li><a href="#pricing" class="main-nav-link">Pricing</a></li>
+          <li><a href="#cta" class="main-nav-link nav-cta">Try for free</a></li>
         </ul>
       </nav>
+
+      <button class="btn-mobile-nav">
+        <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+        <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+      </button>
     </header>
+
     <main>
       <section class="section-hero">
         <div class="hero">
@@ -46,10 +67,11 @@
               eat healthy again. Tailored to your personal tastes and
               nutritional needs. We have delivered 250,000+ meals last year!
             </p>
-            <a href="#" class="btn btn--full margin-right-sm"
+            <a href="#cta" class="btn btn--full margin-right-sm"
               >Start eating well</a
             >
-            <a href="#" class="btn btn--outline">Learn More &darr;</a>
+
+            <a href="#how" class="btn btn--outline">Learn More &darr;</a>
             <div class="delivered-meals">
               <div class="delivered-imgs">
                 <img
@@ -83,11 +105,22 @@
             </div>
           </div>
           <div class="hero-img-box">
-            <img
-              src="07-Omnifood-Desktop/img/hero.png"
-              alt="woman enjoying food, meals in a storage container and meals on a table"
-              class="hero-img"
-            />
+            <picture>
+              <source
+                srcset="07-Omnifood-Desktop/img/hero.webp"
+                type="image/webp"
+              />
+              <source
+                srcset="07-Omnifood-Desktop/img/hero-min.png"
+                type="image/png"
+              />
+
+              <img
+                src="07-Omnifood-Desktop/img/hero-min.png"
+                class="hero-img"
+                alt="Woman enjoying food, meals in storage container, and food bowls on a table"
+              />
+            </picture>
           </div>
         </div>
       </section>
@@ -118,7 +151,7 @@
           </div>
         </div>
       </section>
-      <section class="section-how">
+      <section class="section-how" id="how">
         <div class="container">
           <span class="subheading">How it works</span>
           <h2 class="heading-secondary">
@@ -189,7 +222,7 @@
         </div>
       </section>
 
-      <section class="section-meals">
+      <section class="section-meals" id="meals">
         <div class="container center-text">
           <span class="subheading">Meals</span>
           <h2 class="heading-secondary">
@@ -313,7 +346,7 @@
         </div>
       </section>
 
-      <section class="section-testimonial">
+      <section class="section-testimonial" id="testimonials">
         <div class="testimonial-container">
           <span class="subheading">testimonials</span>
           <h2 class="heading-secondary">Once you try it, you can't go back</h2>
@@ -461,7 +494,7 @@
         </div>
       </section>
 
-      <section class="section-pricing">
+      <section class="section-pricing" id="pricing">
         <div class="container">
           <span class="subheading">Pricing</span>
           <h2 class="heading-secondary">
@@ -572,7 +605,7 @@
         </div>
       </section>
 
-      <section class="section-cta">
+      <section class="section-cta" id="cta">
         <div class="container">
           <div class="cta">
             <div class="cta-text-box">
@@ -663,7 +696,8 @@
           </ul>
 
           <p class="copyright">
-            Copyright &copy; 2022 by Omnifood, Inc. All rights reserved
+            Copyright &copy; <span class="year">2027</span> by Omnifood, Inc.
+            All rights reserved
           </p>
         </div>
 
@@ -719,6 +753,11 @@
     <script
       nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
+    <script defer src="07-Omnifood-Desktop/js/script.js"></script>
+    <script
+      defer
+      src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"
     ></script>
   </body>
 </html>
